[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = ""
authors = ["misostack <misostack.com@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
celery = "^5.4.0"
redis = "^5.0.7"
flower = "^2.0.1"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
